# llm-outputVerifier

./: Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml  setup.py
api/: __init__.py  main.py  schemas.py
config/: config.py
data/: __init__.py  augmentation.py  dataset.py  preprocessing.py
evaluation/: __init__.py  metrics.py  visualizer.py
inference/: __init__.py  predictor.py
models/: __init__.py  classifier.py  encoder.py
scripts/: evaluate.py  train.py
tests/: test_data.py  test_inference.py  test_models.py  test_training.py
training/: __init__.py  optimizer.py  trainer.py
ui/: app.py
